# KinectImageCapture

./: CMakeLists.txt  FramePacket.cpp  KinectCapture.cpp  README.md  calibration.cpp  imageRender.cpp  main.cpp  utils.cpp
include/: FramePacket  FramePacket.h  KinectCapture  KinectCapture.h  PlyIO.h  common  common.h  imageRender.h  utils.h
